Fix remove-stage and remove-job button alignment

--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_stages.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_stages.scss
@@ -170,7 +170,7 @@ $task-body-bg: #f5f5f5;
   .remove-job {
     position: absolute;
     left:     calc(100% - 31px);
-    top:      8px;
+    top:      inherit;
   }
 
   .snippet {
@@ -279,7 +279,7 @@ $task-body-bg: #f5f5f5;
 .remove-stage {
   position: absolute;
   right:    -15px;
-  top:      -18px;
+  top: inherit;
 }
 
 //tasks
